# Agent_Orchestration_RootCauseAnalysis

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.console  Dockerfile.example  LICENSE  Makefile  README.md  README_DOCKER.md  START_ALL.command  START_TEP_COPILOT.command  STOP_TEP_COPILOT.command  docker-compose.yml  pyproject.toml  requirements-nat.txt  requirements.frozen.txt  requirements.txt  unified_console.py
.github/workflows/: ci.yml  release.yml
RAG/converted_markdown/: 1_TEP_Control_Structure_Analysis.md  2_TEP_Complete_Technical_Reference.md  4_TEP_Calculation_Methods_And_Equations.md  Downs & Vogel.md  TEP McAvoy.md  chemical_process_equipment_manu.md
archive/legacy_demo_material/: README.md
backend/: __init__.py  a2a_router.py  agent_models.py  app.py  email_sender.py  knowledge_manager.py  langgraph_api.py  langgraph_rca.py  mcp_server.py  misc_router.py  multi_llm_client.py  nat_api.py  nat_api_live.py  nat_runner.py  report_generator.py  sim_control.py
backend/agent_tools/: __init__.py  anomaly_tools.py  evidence_router.py  history_tools.py  knowledge_tools.py  live_snapshot.py  pattern_tools.py  policy_tools.py  schemas.py  tep_tags.py  vector_knowledge.py
backend/evaluation/: __init__.py  evaluate_agentic_discovery.py  evaluate_full.py  evaluate_nat_rca.py  evaluate_retrieval.py  golden_cases.jsonl  judge.py  synth_cases.py
backend/nat_workflows/: README.md  __init__.py  nat_tep_plugin.py  tep_rca_workflow.yml
backend/tests/: __init__.py  test_a2a_router.py  test_business_logic.py  test_evidence_router.py  test_judge.py  test_langgraph_rca.py  test_mcp_server.py  test_path_leak_regression.py  test_pattern_tools.py  test_smoke.py
blog/: tep_nat_agentic_rca_blog.html  tep_nat_agentic_rca_blog.md
config/: config.template.json
docs/: A2A_INTEGRATION.md  AI_DISCOVERY_BRIEF_AGENTIC_RCA.md  DOCKER_SMOKE_TEST.md  MCP_INTEGRATION.md  NAT_AGENTIC_RCA_ARCHITECTURE.md  SAMPLE_DIAGNOSIS_FAULT4.md
docs/assets/mockup/: index.html
docs/sample_runs/: lg_run_fault4_sample.json
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  PublicApp.tsx  main.tsx  setupTests.ts
frontend/src/api/: agent.ts  discovery.ts
frontend/src/api/__tests__/: agent.test.ts
frontend/src/components/: AgentAdvisoryPanel.tsx  AgentTimelinePanel.tsx  All52SensorsDrawer.tsx  AnomalyScoreChart.tsx  BakeoffCard.tsx  DiagnoseButton.tsx  DiscoveryGraphPipeline.tsx  EvaluatorVerdictPanel.tsx  EvidenceByLayerPanel.tsx  EvidenceVariableTable.tsx  FollowupChat.tsx  HistoryDrawer.tsx  HypothesisRanking.tsx  IDVKnob.tsx  IDVPanel.tsx  LiveSimPanel.tsx  ModelSelector.tsx  SafetyBoundaryBanner.tsx  SensorSparklineGrid.tsx  SimControls.tsx  StatusBar.tsx  ToolTraceTimeline.tsx  TraceStep.tsx  WikiSourceCard.tsx
frontend/src/components/__tests__/: BakeoffCard.test.tsx
frontend/src/hooks/: useAgentStream.ts  useAnomalyState.ts  useDiscoveryStream.ts  useLiveBuffer.ts
frontend/src/pages/: AgentRunPage.tsx  AssistantPage.tsx  DiscoveryPage.tsx  EvaluationPage.tsx  LLMWikiPage.tsx  LiveCopilotPage.tsx  LiveProcessPage.tsx  MiscPage.tsx  OperationsDashboardPage.tsx  PlotPage.tsx
knowledge_base/: 1_TEP_Control_Structure_Analysis.docx  2_TEP_Complete_Technical_Reference.docx  3_TEP_Base_Case_Steady_State_Conditions.docx  4_TEP_Calculation_Methods_And_Equations.docx
scripts/: smoke_live_copilot.sh  test_nat_real.sh
static/: interactive_chat.js
templates/: control_panel.html
