[project]
name = "tep-agent-orchestration-demo"
version = "0.2.0"
description = "Read-only agentic root-cause-analysis workbench for the Tennessee Eastman Process, with an optional NeMo Agent Toolkit (NAT) workflow."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
    { name = "chennanli" },
]
keywords = ["tep", "tennessee-eastman", "agentic", "rca", "industrial-ai", "nemo-agent-toolkit", "nat"]

# Runtime dependencies that the legacy demo + the new NAT-tool layer + the
# new FastAPI router all need. NAT itself is intentionally NOT pulled in
# here (see [project.optional-dependencies]).
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "python-dotenv>=1.0",
    "openai>=1.12",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "matplotlib>=3.8",
    "plotly>=5.20",
    # The next three are technically transitive in a "with NAT" install
    # (huggingface_hub / langchain pull them in), but the slim install
    # path — `pip install .` without `[nat]` — needs them as first-class
    # deps so backend/app.py imports succeed on CI:
    #   - pyyaml  : backend/agent_models.make_workflow_yaml
    #   - requests: backend/multi_llm_client.py + a couple of /rag/* handlers
    #   - httpx   : fastapi.testclient + backend/ai_agent_service.py
    "pyyaml>=6.0",
    "requests>=2.28",
    "httpx>=0.27",
    # python-multipart is needed by FastAPI any time a route declares
    # `UploadFile = File(...)`. FastAPI validates that at @app.post()
    # decoration time, so without this the whole backend.app import
    # raises RuntimeError. Used by /rag/upload_build and /api/misc/kb/upload.
    "python-multipart>=0.0.9",
    # ---------------------------------------------------------------------
    # AI Discovery Workbench runtime — required at IMPORT TIME by the
    # post-MVP modules (mirrors the same block in requirements.txt).
    # These are NOT optional: backend/langgraph_rca.py and
    # backend/mcp_server.py do top-level `from langgraph.graph import ...`
    # / `from mcp.server.fastmcp import ...`. CI installs via
    # `pip install -e ".[dev]"`, so without these here
    # `pytest backend/tests` fails at COLLECTION for test_langgraph_rca.py,
    # test_mcp_server.py, and test_judge.py (judge.py re-exports
    # _extract_first_json from langgraph_rca).
    # Pinned to the versions the eval scripts exercise on 2026-05-16.
    "langgraph>=1.1,<2.0",                       # 5-node orchestrator
    "langgraph-checkpoint-sqlite>=3.1,<4.0",     # sqlite checkpointer
    "langchain>=1.2,<2.0",                       # LLM message + tool primitives
    "langchain-nvidia-ai-endpoints>=1.3,<2.0",   # NIM ChatNVIDIA + Embeddings
    "chromadb>=1.5,<2.0",                        # vector index for hybrid RAG
    "rank-bm25>=0.2,<0.3",                       # BM25 sparse retrieval
    "stumpy>=1.14,<2.0",                         # Matrix Profile case memory
    "mcp>=1.27,<2.0",                            # Model Context Protocol server
    "typing-extensions>=4.10",                   # TypedDict total=False for RCAState
]

[project.optional-dependencies]
# Real NeMo Agent Toolkit runtime. Install with:
#     uv sync --extra nat
# Requires Python 3.11+ and an NVIDIA_API_KEY for the `_type: nim` LLM in
# backend/nat_workflows/tep_rca_workflow.yml.
nat = [
    "nvidia-nat[langchain]>=1.3.0,<2.0.0",
]

# Dev / lint / test tooling. Install with:
#     uv sync --extra dev
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/chennanli/Agent_Orchestration_RootCauseAnalysis"
Repository = "https://github.com/chennanli/Agent_Orchestration_RootCauseAnalysis"
Issues = "https://github.com/chennanli/Agent_Orchestration_RootCauseAnalysis/issues"

# ---------------------------------------------------------------------------
# Build system: we ship the project as a Python application, not a wheel,
# so `setuptools` is enough to make `uv sync` happy.
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

# ---------------------------------------------------------------------------
# Tool config
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
